# edrus

./: Cargo.toml  Makefile.toml  rustfmt.toml
editor/: Cargo.toml
editor/src/: buffer.rs  cursor.rs  error.rs  lib.rs  text_buffer.rs  tree.rs
gui/: Cargo.toml  Makefile.toml
gui/fonts/: iosevka-license.md
gui/shaders/cursor/: cursor.frag  cursor.vert  fragment.spirv  vertex.spirv
gui/src/: keyboard.rs  main.rs  rendering.rs  scripting.rs  text.rs
gui/src/text/: brush.rs
gui/src/text/brush/: builder.rs  pipeline.rs
