[package]
name = "edrus-gui"
version = "0.1.0"
authors = ["Leonardo Hahn <leonnardo.hahn@gmail.com>"]
edition = "2018"

[[bin]]
name = "edrus"
path = "src/main.rs"

[dependencies]
wgpu = "0.4"
winit = "0.21"
env_logger = "0.7.1"
glsl-to-spirv = "0.1"
wgpu_glyph = "0.6"
edrus = { path = "../editor" }
log = "0.4"
rusttype = "0.8"
zerocopy = "0.3"
shaderc = "0.6"
nalgebra = "0.18"
