[package]
name = "edrus-gui"
version = "0.1.0"
authors = ["Leonardo Hahn <leonnardo.hahn@gmail.com>"]
edition = "2018"

[[bin]]
name = "edrus"
path = "src/main.rs"

[dependencies]
wgpu = "0.5"
winit = "0.22"
env_logger = "0.7.1"
glsl-to-spirv = "0.1"
edrus = { path = "../editor" }
log = "0.4"
nalgebra = { version = "0.19.0", features = ["serde-serialize", "mint"] }
wgpu_glyph = "0.8"
glyph_brush = "0.6.3"
rusttype = "0.8.2"
flame = "0.2.2"
flamer = "0.3"
serde = "1.0.0"
serde_derive = "1.0.0"
gluon = { version = "0.13.1", features = ["serialization"] }
gluon_codegen = "0.13.1"
dirs = "2.0.2"
futures = "0.3.4"
bytemuck = "1.2.0"

[dev-dependencies]
shaderc = "0.6"
